precompiles/utils/macro/tests/precompile/compile-fail/pre-check/too-many-parameters.stderr
error: Precompile pre_check method must have exactly 1 parameter (the PrecompileHandle)
  --> tests/precompile/compile-fail/pre-check/too-many-parameters.rs:21:2
   |
21 |     fn pre_check(_: &mut impl PrecompileHandle, _: u32) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
